@@ -1,4 +1,10 @@
 
+Изменения в nginx 1.1.10                                          30.11.2011
+
+    *) Исправление: при использовании AIO на Linux в рабочем процессе
+       происходил segmentation fault; ошибка появилась в 1.1.9.
+
+
 Изменения в nginx 1.1.9                                           28.11.2011
 
     *) Изменение: теперь двойные кавычки экранируется при выводе
