@@ -2,6 +2,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2011-11-30">
+<para>
+<a href="/en/download.xml">nginx-1.1.10</a>
+development version has been released.
+</para>
+</event>
+
 <event date="2011-11-28">
 <para>
 <a href="/en/download.xml">nginx-1.1.9</a>
