@@ -8,6 +8,7 @@
 
 <download last="1" changes="CHANGES.ru">
 
+<item ver="1.1.10" pgp="yes" win="yes" />
 <item ver="1.1.9" pgp="yes" win="yes" />
 <item ver="1.1.8" pgp="yes" win="yes" />
 <item ver="1.1.7" pgp="yes" win="yes" />
