@@ -1,7 +1,7 @@
 <!DOCTYPE versions SYSTEM "../dtd/versions.dtd">
 
 <versions>
-<development> 1.1.9 </development>
+<development> 1.1.10 </development>
 <stable> 1.0.10 </stable>
 <legacy_stable> 0.8.55 </legacy_stable>
 </versions>
